<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PortfolioLanding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/nanodegree_margin_bottom"
        android:padding="@dimen/nanodegree_padding"
        android:text="@string/nanodegree_apps"
        android:textSize="@dimen/nanodegree_text_size"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/project1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runProject"
                android:text="@string/project1_text" />

            <Button
                android:id="@+id/project2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runProject"
                android:text="@string/project2_text" />

            <Button
                android:id="@+id/project3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runProject"
                android:text="@string/project3_text" />

            <Button
                android:id="@+id/project4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runProject"
                android:text="Build It Bigger" />

            <Button
                android:id="@+id/project5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runProject"
                android:text="@string/project5_text" />

            <Button
                android:id="@+id/project6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="runProject"
                android:text="@string/project6_text" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
